[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.26.0",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "playwright>=1.50.0",
    "zendriver>=0.5.1",
]
