[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.24",
    "docling>=2.26.0",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-docling>=0.2.0",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "langgraph-supervisor>=0.0.11",
    "playwright>=1.50.0",
    "xmltodict>=0.14.2",
    "zendriver>=0.5.1",
]
